# pasozon

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
recsys/: blend_rrf.py  build_candidates.py  config.py  covis.py  features.py  make_submission.py  popularity.py  rerank_diversity.py  train_lgbm_ranker.py
recsys/utils/: io.py  logging.py
