[tool.poetry]
name = "ozon-recsys-b"
version = "0.1.0"
description = "Trajectory B: candidates + LightGBM ranker + RRF + diversity for NDCG@100"
authors = ["Team Hackathon"]
readme = "README.md"
packages = [{ include = "recsys" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
polars = "^1.5.0"
pyarrow = "^17.0.0"
pandas = "^2.2.2"
numpy = "^2.0.1"
scikit-learn = "^1.5.1"
lightgbm = "^4.5.0"
pyyaml = "^6.0.2"
tqdm = "^4.66.4"

# опционально для CLIP-ANN кандидатов (можно удалить)
faiss-cpu = {version = "^1.8.0", optional = true}

[tool.poetry.extras]
ann = ["faiss-cpu"]

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
